test/libsolidity/syntaxTests/nameAndTypeResolution/515_experimental_pragma_empty.sol
pragma experimental;
// ----
// SyntaxError: (0-20): Experimental feature name is missing.
